# mjp

./: .gitignore  INSTALL.md  LICENSE  README.md  boot.sh  configure.ac  mjp.cc
include/: mjpDate.hh
src/: Makefile.am  mjp.cpp  mjpDate.cc
src/lib/: Makefile.am  mjpDate.cpp  mjpRead.cpp  mjpRead.hpp  mjpWrite.cpp  mjpWrite.hpp
