noinst_LIBRARIES = libmjpDate.a libmjpWrite.a
libmjpDate_a_CFLAGS = \
					   -I../    \
					   -I../lib \
					   $(CFLAGS)

libmjpDate_a_SOURCES = \
						mjpDate.cpp mjpDate.hpp

libmjpWrite_a_CFLAGS = \
					   -I../    \
					   -I../lib \
					   $(CFLAGS)

libmjpWrite_a_SOURCES = \
						mjpWrite.cpp mjpWrite.hpp
