noinst_LIBRARIES = libmjpDate.a libmjpWrite.a libmjpRead.a
libmjpDate_a_CFLAGS = \
					   -I../    \
					   -I../lib \
					   $(CFLAGS)

libmjpDate_a_SOURCES = \
						mjpDate.cpp mjpDate.hpp

libmjpWrite_a_CFLAGS = \
					   -I../    \
					   -I../lib \
					   $(CFLAGS)

libmjpWrite_a_SOURCES = \
						mjpWrite.cpp mjpWrite.hpp

libmjpRead_a_CFLAGS = \
					   -I../    \
					   -I../lib \
					   $(CFLAGS)

libmjpRead_a_SOURCES = \
						mjpRead.cpp mjpRead.hpp
